--- a/.gitignore
+++ b/.gitignore
@@ -1,19 +1,13 @@
-# IDE
 .idea
-
 yarn-debug.log*
 yarn-error.log*
-
-# Dependency directories
 node_modules/
-
-# Optional eslint cache
 .eslintcache
 
-# dotenv environment variables file
 .env
 .env.test
 
-# parcel-bundler cache (https://parceljs.org/)
 .cache
 dist
+
+src/config/config.ts
