--- a/package.json
+++ b/package.json
@@ -4,5 +4,54 @@
   "main": "index.js",
   "repository": "git@github.com:polakbear/spotify-gql.git",
   "author": "Sylwia Malinowska <sylwia@polakbear.dev>",
-  "license": "MIT"
+  "license": "MIT",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "foo": "nodemon src/index.ts",
+    "start": "tsc && concurrently 'tsc -w' 'nodemon ./dist/index.js'",
+    "build": "tsc --project ./",
+    "codegen": "graphql-codegen --config codegen.yml"
+  },
+  "keywords": [],
+  "dependencies": {
+    "@apollo/federation": "^0.21.0",
+    "@types/consolidate": "^0.14.0",
+    "@types/express": "^4.17.11",
+    "@types/express-session": "^1.17.3",
+    "@types/graphql": "^14.5.0",
+    "@types/lodash": "^4.14.168",
+    "@types/node": "^14.14.25",
+    "@types/node-fetch": "^2.5.8",
+    "@types/node-json-db": "^0.9.3",
+    "@types/passport": "^1.0.5",
+    "@types/passport-spotify": "^1.1.0",
+    "@types/spotify-web-api-node": "^5.0.0",
+    "apollo-server": "^2.19.2",
+    "apollo-server-express": "^2.19.2",
+    "concurrently": "^5.3.0",
+    "consolidate": "^0.16.0",
+    "cookie-session": "^1.4.0",
+    "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "express-session": "^1.17.1",
+    "graphql": "^15.5.0",
+    "lodash": "^4.17.20",
+    "node-fetch": "^2.6.1",
+    "node-json-db": "^1.1.0",
+    "nodemon": "^2.0.7",
+    "passport": "^0.4.1",
+    "passport-spotify": "^2.0.0",
+    "prettier": "^2.2.1",
+    "query-string": "^6.13.8",
+    "spotify-web-api-node": "^5.0.2",
+    "ts-node": "^9.1.1",
+    "typescript": "^4.1.3"
+  },
+  "devDependencies": {
+    "@graphql-codegen/cli": "1.20.0",
+    "@graphql-codegen/introspection": "1.18.1",
+    "@graphql-codegen/typescript": "1.20.0",
+    "@graphql-codegen/typescript-resolvers": "1.18.1"
+  }
 }
