--- a/package.json
+++ b/package.json
@@ -8,13 +8,12 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "foo": "nodemon src/index.ts",
-    "start": "tsc && concurrently 'tsc -w' 'nodemon ./dist/index.js'",
+    "start": "tsc && node dist/index.js",
     "build": "tsc --project ./",
     "codegen": "graphql-codegen --config codegen.yml"
   },
   "keywords": [],
   "dependencies": {
-    "@apollo/federation": "^0.21.0",
     "@types/consolidate": "^0.14.0",
     "@types/express": "^4.17.11",
     "@types/express-session": "^1.17.3",
