--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,7 @@
     "outDir": "dist",
     "baseUrl": ".",
     "allowJs": true,
+    "skipLibCheck": true,
     "paths": {
       "*": ["node_modules/*"]
     }
