--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "scripts": {
     "dev": "nodemon",
     "build": "rimraf ./dist && tsc",
+    "clean": "rimraf ./build && rimraf node_modules",
     "start": "npm run build && node dist/index.js",
     "codegen": "graphql-codegen --config codegen.yml"
   },
@@ -17,16 +18,16 @@
     "@types/graphql": "^14.5.0",
     "@types/node": "^14.14.25",
     "@types/node-fetch": "^2.5.8",
-    "@types/spotify-web-api-node": "^5.0.7",
     "apollo-server-express": "^3.1.2",
     "concurrently": "^7.0.0",
     "dotenv": "^8.2.0",
+    "easy-spotify-ts": "^0.3.0",
     "express": "^4.17.1",
     "graphql": "^15.5.1",
     "node-fetch": "2.6.7",
     "nodemon": "^2.0.12",
     "prettier": "^2.2.1",
-    "spotify-web-api-node": "^5.0.2",
+    "spotify-ts": "github:polakbear/spot-ts",
     "ts-node": "^9.1.1",
     "typescript": "^4.1.3"
   },
